test/resources/typer/passing/StupidMatch.scala
object StupidMatch
    L.Nil() match { case L.Cons(_, t) => () }
end StupidMatch